bugfix: widen editor was not undoable on safari

--- a/htdocs/css/editor.css
+++ b/htdocs/css/editor.css
@@ -443,7 +443,7 @@ body .monaco-editor-hover .monaco-tokenized-source {
 }
 
 #view-mode {
-    margin-right: 20px !important;
+    margin-right: 8px !important;
 }
 
 #debugpanel>div {
